CREATE TABLE "users" (
  "user_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar(50) UNIQUE NOT NULL,
  "email" varchar(100) UNIQUE NOT NULL
);

CREATE TABLE "workouts" (
  "workout_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "workout_date" date,
  "workout_type" varchar(50),
  "duration_minutes" int,
  "rpe" int,
  "notes" text
);

CREATE TABLE "exercises" (
  "exercise_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) UNIQUE NOT NULL,
  "category" varchar(50),
  "is_bodyweight" boolean
);

CREATE TABLE "workout_sets" (
  "set_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "workout_id" int,
  "exercise_id" int,
  "set_number" int,
  "reps" int,
  "weight_used" decimal(5,2),
  "rest_seconds" int,
  "set_type" varchar(20)
);

CREATE TABLE "measurements" (
  "measurement_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "measurement_date" date,
  "weight" decimal(5,2),
  "body_fat_pct" decimal(4,2),
  "hips_inches" decimal(4,2),
  "waist_inches" decimal(4,2),
  "chest_inches" decimal(4,2),
  "thigh_inches" decimal(4,2),
  "arm_inches" decimal(4,2),
  "resting_heart_rate" int,
  "mood" int,
  "pain_level" int
);

CREATE TABLE "sleep_logs" (
  "log_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "sleep_date" date,
  "hours_slept" decimal(4,2),
  "sleep_quality" int,
  "notes" text
);

CREATE TABLE "food_logs" (
  "food_log_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "log_date" date,
  "meal_type" varchar(20),
  "calories" int,
  "protein_g" decimal(5,2),
  "carbs_g" decimal(5,2),
  "fat_g" decimal(5,2),
  "sodium_mg" int,
  "sugar_g" decimal(5,2),
  "notes" text
);

CREATE TABLE "hydration_logs" (
  "hydration_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "log_date" date,
  "total_water_oz" int,
  "electrolyte_mix_used" boolean,
  "notes" text
);

ALTER TABLE "workouts" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id");

ALTER TABLE "workout_sets" ADD FOREIGN KEY ("workout_id") REFERENCES "workouts" ("workout_id");

ALTER TABLE "workout_sets" ADD FOREIGN KEY ("exercise_id") REFERENCES "exercises" ("exercise_id");

ALTER TABLE "measurements" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id");

ALTER TABLE "sleep_logs" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id");

ALTER TABLE "food_logs" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id");

ALTER TABLE "hydration_logs" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id");
