Table users {
  user_id int [pk, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
}

Table workouts {
  workout_id int [pk, increment]
  user_id int [ref: > users.user_id]
  workout_date date
  workout_type varchar(50) // e.g. "Strength", "Cardio", "Yoga"
  duration_minutes int
  rpe int // 1-10 scale
  notes text
}

Table exercises {
  exercise_id int [pk, increment]
  name varchar(100) [unique, not null]
  category varchar(50) // e.g. "Upper Body", "Core", etc.
  is_bodyweight boolean
}

Table workout_sets {
  set_id int [pk, increment]
  workout_id int [ref: > workouts.workout_id]
  exercise_id int [ref: > exercises.exercise_id]
  set_number int
  reps int
  weight_used decimal(5,2)
  rest_seconds int
  set_type varchar(20) // e.g. "warm-up", "working", "burnout", "drop"
}

Table measurements {
  measurement_id int [pk, increment]
  user_id int [ref: > users.user_id]
  measurement_date date
  weight decimal(5,2)
  body_fat_pct decimal(4,2)
  hips_inches decimal(4,2)
  waist_inches decimal(4,2)
  chest_inches decimal(4,2)
  thigh_inches decimal(4,2)
  arm_inches decimal(4,2)
  resting_heart_rate int
  mood int // 1-10 scale
  pain_level int // 1-10 scale
}

Table sleep_logs {
  log_id int [pk, increment]
  user_id int [ref: > users.user_id]
  sleep_date date
  hours_slept decimal(4,2)
  sleep_quality int // 1-10 scale
  notes text
}

Table food_logs {
  food_log_id int [pk, increment]
  user_id int [ref: > users.user_id]
  log_date date
  meal_type varchar(20) // Breakfast, Lunch, etc.
  calories int
  protein_g decimal(5,2)
  carbs_g decimal(5,2)
  fat_g decimal(5,2)
  sodium_mg int
  sugar_g decimal(5,2)
  notes text
}

Table hydration_logs {
  hydration_id int [pk, increment]
  user_id int [ref: > users.user_id]
  log_date date
  total_water_oz int
  electrolyte_mix_used boolean
  notes text
}